--- a/_posts/2023-06-08-Test.md
+++ b/_posts/2023-06-08-Test.md
@@ -1,7 +1,8 @@
 ---
 title: Hello World
 categories: [Admin, welcome]
-tags: [test]     # TAG names should always be lowercase
+tags: [education, employment, resume]     # TAG names should always be lowercase
+pin: true
 ---
 
-This is a test post, for the purposes of testing/experimenting with my new shiny website.
+Welcome. To see an overview of my employment and education history,  check out the "Education and Experience" section in the sidebar! Alternatively, here is my [current resume]({{ site.baseurl }}{% link /assets/files/resume2023.pdf %}).
